# course_proj_4_oop

./: .gitignore  README.md  main.py  pyproject.toml
data/: data_json_hh.json  data_vacancies.txt
src/: abc_class.py  abc_class_parser.py  class_job_compression.py  class_management.py  class_parser.py  class_vacancy.py
tests/: test_class_management.py
