[tool.poetry]
name = "course-project-4-oop"
version = "0.1.0"
description = ""
authors = ["menosad <draignair@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
